docs: Add troubleshooting section